# vesyla

./: .directory  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  clean  vesyla.code-workspace
autotest/: .directory  autotest_conf.robot  run.sh  testall.sh
autotest/algorithms/: 16x16_gemm.m
cmake/Modules/: FindGecode.cmake
config/: config_files.xml  hardware_def.xml  hw_setting.conf  primitive_func_def.xml  primitive_func_def_guido.xml  silago_cell_def.xml
matlab/: datatransfer.m  eq4_1.m  eq4_4.m  eq4_5.m  fft128.m  fft2.m  fft64.m  lstmpar_13.m  pseudo.m  sigmoid.m  som (copy).m  som.m  som2.m  som_opt.m  som_vec.m  som_vec_2.m  test.m  test64.m  test_dimarch.m  test_reg.m  testif.m  vvp.m
matlab/som/: schedule  schedule2  schedule3  som1.m  som2.m  som4.m
matlab_lib/: silago_agu_linear_1d.m  silago_agu_linear_2d.m  silago_dpu_2_macs.m  silago_dpu_3_sums.m  silago_dpu_axpy.m  silago_dpu_axpy_acc.m  silago_dpu_load_reg_0.m  silago_dpu_load_reg_1.m  silago_dpu_load_reg_both.m  silago_dpu_preserving_mac.m  silago_dpu_scale_mul.m  silago_dpu_shift_1.m  silago_dpu_shift_hp1.m  silago_dpu_store_reg_0.m  silago_dpu_store_reg_1.m  silago_dpu_store_reg_both.m  silago_dpu_xor.m
matlab_util/: print_stmt_assignment.m
src/BEngine/: BEngine.cpp  BEngine.hpp  ConfigManager.cpp  ConfigManager.hpp  HWSetting.hpp  SwbManager.cpp  SwbManager.hpp
src/BEngine_deprecated/: BEngine.cpp  BEngine.hpp  HWSetting.hpp  SwbManager.cpp  SwbManager.hpp
src/BIR/: AGU.cpp  AGU.cpp.bk  AGU.hpp  AddressMode.cpp  AddressMode.hpp  BIRBase.cpp  BIRBase.hpp  BIRFwDeclarations.hpp  BIRIncludeAll.hpp  BIRKindType.cpp  BIRKindType.hpp  BranchInstruction.cpp  BranchInstruction.hpp  BranchMode.cpp  BranchMode.hpp  ComponentInfo.cpp  ComponentInfo.hpp  ComponentType.cpp  ComponentType.hpp  ContileCell.cpp  ContileCell.cpp.bk  ContileCell.hpp  ContileCell.hpp.bk  DPU.cpp  DPU.cpp.bk  DPU.hpp  DPUInstruction.cpp  DPUInstruction.hpp  DPUMode.cpp  DPUMode.hpp  DRRACell.cpp  DRRACell.hpp  DRRACell.hpp.bk  DRRACluster.cpp  DRRACluster.cpp.bk  DRRACluster.hpp  DRRACluster.hpp.bk  DiMArch.cpp  DiMArch.hpp  DiMArch.hpp.bk  (+66 more)
src/VDump/: BackendDump.cpp  LayoutDump.cpp  VDump.cpp  VDump.hpp  VhdlCodeGeneration.cpp
src/VDump_deprecated/: BackendDump.cpp  LayoutDump.cpp  VDump.cpp  VDump.hpp  VhdlCodeGeneration.cpp
src/VElaborator/: AddressElaborator.cpp  AddressElaborator.hpp  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  IdentifierConversionElaborator.cpp  IdentifierConversionElaborator.hpp  SecondTraverse.cpp  VElaborator.cpp  VElaborator.hpp
src/VElaborator_deprecated/: AddressElaborator.hpp  ExpressionEvaluator.cpp  SecondTraverse.cpp  VElaborator.cpp
src/VIR/: Address.cpp  Address.hpp  AddressFunction.cpp  AddressFunction.hpp  AddressInfo.cpp  AddressInfo.hpp  AddressObjectDeclaration.cpp  AddressObjectDeclaration.hpp  AddressPragma.cpp  AddressPragma.hpp  Array.cpp  Array.hpp  AssignmentPragma.cpp  AssignmentPragma.hpp  AssignmentStatement.cpp  AssignmentStatement.hpp  AssignmentType.cpp  AssignmentType.hpp  BinaryExpression.cpp  BinaryExpression.hpp  BinaryOperatorType.cpp  BinaryOperatorType.hpp  BlockPragma.cpp  BlockPragma.hpp  BlockPragmaType.cpp  BlockPragmaType.hpp  Complex.cpp  Complex.hpp  ControlStatement.cpp  ControlStatement.hpp  Coordinate.cpp  Coordinate.hpp  DPUChainPragma.cpp  DPUChainPragma.hpp  DPUPragma.cpp  DPUPragma.hpp  DebugStatement.cpp  DebugStatement.hpp  Declaration.cpp  Declaration.hpp  (+94 more)
src/VManager/: FileManager.cpp  FileManager.hpp  FileManager.hpp.bk  FileType.hpp  FileType.hpp.bk  MemoryManager.cpp  MemoryManager.hpp  VFileNames.hpp  VFileNames.hpp.bk
src/VParser/: BisonUtility.cpp  BisonUtility.hpp  FlexUtility.hpp  ParserGlobal.cpp  ParserGlobal.hpp  VParser.cpp  VParser.hpp  vparser.flex.cpp  vparser.l  vparser.tab.cpp  vparser.tab.hpp  vparser.y
src/cidfg/: BranchInstrVertex.cpp  BranchInstrVertex.hpp  BranchVertex.cpp  BranchVertex.hpp  CidfgGraph.cpp  CidfgGraph.hpp  ComputationVertex.cpp  ComputationVertex.hpp  ConstVertex.cpp  ConstVertex.hpp  Converter.cpp  Converter.hpp  DpuInstrVertex.cpp  DpuInstrVertex.hpp  Edge.cpp  Edge.hpp  FunctionVertex.cpp  FunctionVertex.hpp  GeneralHierarchicalVertex.cpp  GeneralHierarchicalVertex.hpp  HierarchicalInstrVertex.cpp  HierarchicalInstrVertex.hpp  HierarchicalVertex.cpp  HierarchicalVertex.hpp  IndexingVertex.cpp  IndexingVertex.hpp  InstrVertex.cpp  InstrVertex.hpp  IntPolynomialTable.cpp  IntPolynomialTable.hpp  JumpInstrVertex.cpp  JumpInstrVertex.hpp  LoopVertex.cpp  LoopVertex.hpp  LoophInstrVertex.cpp  LoophInstrVertex.hpp  LooptInstrVertex.cpp  LooptInstrVertex.hpp  MergeVertex.cpp  MergeVertex.hpp  (+48 more)
src/codegen/: BranchManager.cpp  BranchManager.hpp  BranchVertexConverter.cpp  BranchVertexConverter.hpp  CleanConverter.cpp  CleanConverter.hpp  ComputationVertexConverter.cpp  ComputationVertexConverter.hpp  DescriptorGenerator.cpp  DescriptorGenerator.hpp  Engine.cpp  Engine.hpp  FuncMapper.cpp  FuncMapper.hpp  GeneralHierarchicalVertexConverter.cpp  GeneralHierarchicalVertexConverter.hpp  IndexVertexConverter.cpp  IndexVertexConverter.hpp  IteratorReplacementEngine.cpp  IteratorReplacementEngine.hpp  LoopVertexConverter.cpp  LoopVertexConverter.hpp  MulDivTransEngine.cpp  MulDivTransEngine.hpp  Optimizer.cpp  Optimizer.hpp  PrimitiveFuncLib.cpp  PrimitiveFuncLib.hpp  RaccuOpMergeEngine.cpp  RaccuOpMergeEngine.hpp  RaccuRegAllocEngine.cpp  RaccuRegAllocEngine.hpp  RaccuVarManager.cpp  RaccuVarManager.hpp  RootVertexConverter.cpp  RootVertexConverter.hpp  RouteEngine.cpp  RouteEngine.hpp  SilagoCellLib.cpp  SilagoCellLib.hpp  (+8 more)
src/elaborate/: Elaborator.cpp  Elaborator.hpp
src/feopt/: BindEngine.cpp  BindEngine.hpp  CleanEngine.cpp  CleanEngine.hpp  DependencyAnalyzeEngine.cpp  DependencyAnalyzeEngine.hpp  Engine.cpp  Engine.hpp  ExprSimpEngine.cpp  ExprSimpEngine.hpp  LoopMergeEngine.hpp  Optimizer.cpp  Optimizer.hpp  RwiMergeEngine.cpp  RwiMergeEngine.hpp  SrcConvEngine.cpp  SrcConvEngine.hpp
src/filegen/: Common.cpp  Common.hpp  FileGenerator.cpp  FileGenerator.hpp  (+14 more)
test/: eq5_6.m
(+485 files in other folders)
